--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	
 	        <button onclick="compute()">Compute Interest</button><br/>
 	        <span id="result"></span>   
-	        <footer>&#169; Everyone Can Get Rich</footer>
+	        <footer>&#169; This Calculator belongs to Daniel </footer>
 	    </div>
 	    </body>
 	</html>
