--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	        <h1>Simple Interest Calculator</h1>
 	
 	        Amount <input type="number"  id="principal" onchange="validateAmount()">  <br/>
-	        Interest Rate <input type="range" id="rate" min="1" max="20" step="0.25" value="10.25" onchange="showrate(this.value)"><span id="Rate">10.25%</span>  <br/>
+	        Interest Rate <input type="range" id="rate" min="1" max="20" step="0.25" value="10.25" onchange="showrate(this.value)"><span id="rate">10.25%</span>  <br/>
 	        No. of Years  
 	        <select name="years" id="years">
 	            <option value="1">1</option>
