--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	    <link rel="stylesheet" href="style.css">
 	    </head>
 	    <div class="maindiv">
-	        <h1>Simple&nbsp;Interest&nbsp;Calculator</h1>
+	        <h1>Simple Interest Calculator</h1>
 	        Amount <input type="number"  id="principal" onfocusout="checkdata()">  <br/>
 	        Interest Rate <input type="range" id="rate" min="1" max="20" step="0.25" value="10.25" onchange="showrate(this.value)"><span id="Rate">10.25%</span>  <br/>
 	        No. of Years  
